tests/ui/comptime/comptime_method.stderr
error: comptime fns can only be called at compile time
  --> $DIR/comptime_method.rs:15:5
   |
LL |     Bar.boo();
   |     ^^^^^^^^^

error: aborting due to 1 previous error

